FIX: Set header and footer always visible.

--- a/_attachments/traduxio.css
+++ b/_attachments/traduxio.css
@@ -36,8 +36,8 @@ body,html,input,textarea {
 }
 
 #body {
-  min-height:100%;
   position:relative;
+  top: 2.5em;
 }
 
 #main {
@@ -46,7 +46,10 @@ body,html,input,textarea {
 }
 
 #header {
-  font-size:0.9em;
+  z-index:100;
+  position: fixed;
+  width: 100%;
+  font-size:0.85em;
   color:#fff;
   background: linear-gradient(to bottom, grey 0%, #333 100%);
 }
@@ -58,7 +61,7 @@ body,html,input,textarea {
   position:fixed;
   z-index:99;
   bottom:0px;
-  font-size: 0.85em;
+  font-size: 0.8em;
   height:2.1em;
 }
 
